############
## PASA release v2.5.1
-bugfix - now passing on multithreading parameters to pblat execution



#########
## PASA release v2.5.0, Aug 10, 2021
-added minimap2 support
-uses latest gmap software
-uses gmapl for large genomes (bigger than 2^32)
-support for mysql in docker
-using pblat in place of regular blat

#################
## PASA release v2.4.1,  Nov. 9, 2019

-mysql schema updates for compatibility with latest mysql
-pasaweb updates to leverage user perl @INC environment - finds user installed modules.
-plugin compilation updates for macs
-docker adds pasa binary to /usr/local/bin
-datetime printed for each step of the pipeline execution
-transdecoder updated to current version
-db connection updates for mysql to catch 'lost server'
-including SAM_to_gtf.pl for potential minimap2 integration


#######################################
## PASA release v2.3.3,  April 27, 2018

bugfix release. If using seqclean for transcript cleaning and for polyA-site identification, this patch release should work for you.

Also updated TransDecoder to latest release v5.2.0
Pipeliner updates to better follow operations

maybe a little more than a bugfix release, but intended to be mostly a bugfix release.




#############
## PASA Release v2.3.2 April 19, 2018

-removed cdbyank from most operations to reduce I/O bound issues w/ large chromosomes.
-updated multithreading around sqlite usage to avoid db locking issues.



########
## PASA Release v2.3.1 April 12, 2018
-bugfix:  if users specified both gmap and blat alignments, only blat was being uploaded. This is unique to v2.3.0 and had to do w/ the new pipeliner and checkpointing system.  This is now fixed, and both gmap and blat will be leveraged together as in earlier versions of PASA.


#####################################
## PASA Release v2.3.0 Mar 27, 2018

-Integration of SQLite (by Nathan Weeks)
-GTF and GFF3 annotation support.
-PasaWeb updates for using SQLite and lighttpd